# project_shop

./: .flake8  README.md  pyproject.toml
htmlcov/: index.html  test-report.html
src/: baseproduct.py  category.py  category_iterator.py  lawngrass.py  main.py  mixinlog.py  product.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_category_iterator.py  test_lawngrass.py  test_main.py  test_mixinlog.py  test_product.py  test_smartphone.py  test_utils.py
